--- a/index.html
+++ b/index.html
@@ -56,14 +56,11 @@
         <button class="equal btn">
             =
         </button>
-        <button class="">+</button>
+        <button class="btn">+</button>
 
     </div>
 
     <script src="app.js"></script>
-    <!-- <script type="text/javascript">
-        console.log(math.sqrt(-4).toString()) // 2i
-      </script> -->
 
 </body>
 
